--- a/proyecto2-backend/src/main/resources/application.properties
+++ b/proyecto2-backend/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=proyecto2-backend
 
 spring.datasource.url=jdbc:mysql://localhost:3306/sistema_facturacion
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
