--- a/proyecto2-frontend/package.json
+++ b/proyecto2-frontend/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "jspdf": "^2.5.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-input-mask": "^2.0.4",
     "react-number-format": "^5.3.4",
     "react-router-dom": "^6.23.1",
+    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
